--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=5.3"
+        "php": ">=5.3",
+        "pubnub/pubnub": "^3.7"
     },
     "autoload": {
         "psr-4": {
